--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,22 +10,21 @@ main:
   - name: CV
     url: uploads/resume.pdf
     weight: 20
+  - name: Research
+    url: '#research'
+    weight: 30
   - name: Posts
     url: '#posts'
-    weight: 30
+    weight: 40
   - name: Projects
     url: '#projects'
-    weight: 40
+    weight: 50
   - name: Talks
     url: '#talks'
-    weight: 50
+    weight: 60
   - name: Publications
     url: '#featured'
-    weight: 60
+    weight: 70
   - name: Contact
     url: '#contact'
-    weight: 70
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-
+    weight: 80
