--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: CV
     url: uploads/resume.pdf
     weight: 20
-  - name: Posts
-    url: '#posts'
-    weight: 30
+  #- name: Posts
+  #  url: '#posts'
+  #  weight: 30
   - name: Projects
     url: '#projects'
     weight: 40
