--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,7 @@ main:
   #  url: '#talks'
   #  weight: 50
   - name: Publications
-    url: '#featured'
+    url: '#publication'
     weight: 60
   - name: Contact
     url: '#contact'
