--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -21,7 +21,10 @@ main:
   #  weight: 50
   - name: Publications
     url: '#papers'
-    weight: 60
+    weight: 30
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 40
+  - name: Teaching
+    url: '#teaching'
+    weight: 50
