--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -68,7 +68,8 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    #url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/pvfonseca/pvfonseca.github.io/'
     content_dir: content
     branch: main
   avatar:
