--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -28,14 +28,13 @@ marketing:
     google: ''
     baidu: ''
 
-{{ template "_internal/twitter_cards.html" . }}
 # Site header
 
 header:
   navbar:
     enable: true
     align: l
-    show_logo: true
+    show_logo: false
     show_language: false
     show_day_night: true
     show_search: true
