--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -41,7 +41,7 @@ main:
     parent: courses
     url: teaching/metodosquant
     weight: 30
-  - name: Pensamento Contemporâneo
-    parent: courses
-    url: teaching/pec
-    weight: 40
+  #- name: Pensamento Contemporâneo
+  #  parent: courses
+  #  url: teaching/pec
+  #  weight: 40
