--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -41,6 +41,10 @@ main:
     parent: courses
     url: teaching/metodosquant
     weight: 30
+  - name: Matemática Aplicada
+    parent: courses
+    url: teaching/mtm_aplicada
+    weight: 40  
   #- name: Pensamento Contemporâneo
   #  parent: courses
   #  url: teaching/pec
