--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 'latest'
+          # hugo-version: 'latest'
+          hugo-version: '0.81.0'
           extended: true
 
       - name: Build
-        # run: hugo --minify
-        run: hugo
+        run: hugo --minify        
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
